--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 		"config": "^3.3.9",
 		"express": "^4.18.2",
 		"lodash": "^4.17.21",
+		"morgan": "^1.10.0",
 		"mysql": "^2.18.1",
 		"uuid": "^9.0.1",
 		"winston": "^3.11.0"
