--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
 	"dependencies": {
 		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.2",
+		"chalk": "^5.3.0",
 		"config": "^3.3.9",
+		"dayjs": "^1.11.10",
 		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"morgan": "^1.10.0",
 		"mysql": "^2.18.1",
