--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.17",
 		"@tanstack/react-query": "^5.7.2",
 		"@tanstack/react-query-devtools": "^5.7.4",
 		"axios": "^1.6.0",
