--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.17",
+		"@heroicons/react": "^2.0.18",
 		"@tanstack/react-query": "^5.7.2",
 		"@tanstack/react-query-devtools": "^5.7.4",
 		"axios": "^1.6.0",
+		"date-fns": "^2.30.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
