--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,13 @@
 		"@tanstack/react-query": "^5.7.2",
 		"@tanstack/react-query-devtools": "^5.7.4",
 		"axios": "^1.6.0",
+		"chart.js": "^4.4.0",
 		"date-fns": "^2.30.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
+		"react-calendar": "^4.6.1",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.18.0",
 		"react-spinners": "^0.13.8",
