--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
 		"uuid": "^9.0.1",
 		"winston": "^3.11.0"
