--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"date-fns": "^2.30.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
+		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-calendar": "^4.6.1",
 		"react-chartjs-2": "^5.2.0",
