--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.18.0",
 		"react-spinners": "^0.13.8",
+		"recharts": "^2.9.3",
 		"sort-by": "^1.2.0"
 	},
 	"devDependencies": {
