--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"client"
 	],
 	"scripts": {
-		"dev": "concurrently \"yarn workspace server dev\" \"yarn workspace client dev\""
+		"dev": "concurrently \"yarn workspace server dev\" \"yarn workspace client dev\"",
+		"install": "yarn install",
+		"start": "concurrently \"yarn workspace server start\" \"yarn workspace client build && yarn workspace client preview\""
 	},
 	"devDependencies": {
 		"concurrently": "^8.2.2"
