--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -3,5 +3,6 @@
 	"useTabs": true,
 	"trailingComma": "none",
 	"singleQuote": false,
-	"jsxSingleQuote": false
+	"jsxSingleQuote": false,
+	"bracketSameLine": true
 }
