--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 		"@heroicons/react": "^2.0.18",
 		"@tanstack/react-query": "^5.7.2",
 		"@tanstack/react-query-devtools": "^5.7.4",
+		"@tanstack/react-table": "^8.11.2",
 		"axios": "^1.6.0",
 		"chart.js": "^4.4.0",
 		"date-fns": "^2.30.0",
@@ -26,10 +27,12 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.18.0",
 		"react-spinners": "^0.13.8",
+		"react-toastify": "^9.1.3",
 		"recharts": "^2.9.3",
 		"sort-by": "^1.2.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.4.1",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
 		"@vitejs/plugin-react": "^4.0.3",
