--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,5 +1,8 @@
 {
 	"arrowParens": "always",
 	"useTabs": true,
-	"tabWidth": 4
+	"trailingComma": "none",
+	"singleQuote": false,
+	"jsxSingleQuote": false,
+	"bracketSameLine": true
 }
